Completed CICD with AWS

--- a/Docker and Kubernetes/Creating a Production-Grade Workflow/frontend/.travis.yml
+++ b/Docker and Kubernetes/Creating a Production-Grade Workflow/frontend/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run -e CI=true <docker_username>/<repo_name> npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: "s3bucketname"
+  bucket_path: "docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
